# f1-notifications

./: Cargo.toml  LICENSE
docker/: Dockerfile.bot
src/: main.rs
