[package]
name = "f1-notifications"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
reqwest = { version = "0.12.24", features = ["json"] }
sentry = { version = "0.45.0", features = ["tower", "tower-axum-matched-path", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
